# openslide-rs

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile  README.md  install.sh  install_dependencies.sh
.github/workflows/: build_wheels.yml  rust.yml
benches/: deepzoom.rs  read_region.rs  reads.rs
openslide-py/: Cargo.toml  README.md  pyproject.toml  tox.ini
openslide-py/openslide_py/: __init__.py  deepzoom.py  open_slide.py
openslide-py/src/: lib.rs
openslide-py/tests/: assets  conftest.py  test_deepzoom.py  test_openslide.py
openslide-sys/: Cargo.toml  build.rs
openslide-sys/c-code/: config.h  openslide.c
openslide-sys/src/: bindings.rs  lib.rs
src/: deepzoom.rs  lib.rs  openslide.rs  utils.rs
tests/: deepzoom.rs  openslide.rs
tests/assets/: boxes.tiff  default.svs  small.svs  unopenable.tiff  unreadable.svs
tests/common/: mod.rs
