[package]
name = "openslide-rs"
version = "0.1.0"
authors = ["OlivierD <olivier.dehaene@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openslide-sys = { path = "openslide-sys" }
image = "0.23"
byteorder = "1.3"

[dev-dependencies]
criterion = "0.3"
libmath = "0.2"

[[bench]]
name = "read_region"
harness = false

[workspace]
members = [
    "openslide-py",
    "openslide-sys"
]