[package]
name = "openslide-py"
version = "0.1.0"
authors = ["olivierD <olivier.dehaene@gmail.com>"]
edition = "2018"

[lib]
name = "openslide_py"
crate-type = ["cdylib"]

[dependencies]
openslide-rs = { path = "../" }
numpy = "0.16"
ndarray = "0.15"
ndarray-image = "0.3.0"

[dependencies.pyo3]
version = "0.16.5"
features = ["extension-module"]

[package.metadata.maturin]
requires-dist = ["pillow~=7.1.1", "numpy~=1.19"]